# cosmic-monitor

./: Cargo.toml
debian/: changelog
examples/: linux-fdinfo.rs
i18n/ar/: cosmic_monitor.ftl
i18n/cs/: cosmic_monitor.ftl
i18n/de/: cosmic_monitor.ftl
i18n/el/: cosmic_monitor.ftl
i18n/en/: cosmic_monitor.ftl
i18n/fr/: cosmic_monitor.ftl
i18n/ga/: cosmic_monitor.ftl
i18n/hu/: cosmic_monitor.ftl
i18n/id/: cosmic_monitor.ftl
i18n/kmr/: cosmic_monitor.ftl
i18n/pa/: cosmic_monitor.ftl
i18n/pl/: cosmic_monitor.ftl
i18n/pt-BR/: cosmic_monitor.ftl
i18n/ru/: cosmic_monitor.ftl
i18n/sv/: cosmic_monitor.ftl
i18n/uk/: cosmic_monitor.ftl
i18n/zh-Hans/: cosmic_monitor.ftl
i18n/zh-Hant/: cosmic_monitor.ftl
src/: graph.rs  main.rs  menu.rs
src/info/: app.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  process.rs
src/info/platform/: mod.rs  nvml.rs
src/info/platform/linux/: fdinfo.rs  mod.rs
