[package]
name = "cosmic-monitor"
version = "1.2.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.95"

[dependencies]
clap_lex = "0.7"
env_logger = "0.11"
humansize = "2"
itertools = "0.14"
libc = "0.2"
log = "0.4"
open = "5.3.2"
nvml-wrapper = { version = "0.12", optional = true }
paste = "1"
regex = "1"
serde = { version = "1", features = ["serde_derive"] }
sysinfo = { git = "https://github.com/jackpot51/sysinfo.git", branch = "redox-0.39" }
tokio = { version = "1", features = ["sync"] }
# Internationalization
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
icu = { version = "2.1.1", features = ["compiled_data"] }
rust-embed = "8"

[target.'cfg(unix)'.dependencies]
freedesktop-desktop-entry = { version = "0.8" }
rustix = { version = "1", features = ["process"] }

[target.'cfg(target_os = "linux")'.dependencies]
pci-ids = "0.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["about", "surface-message", "tokio", "winit"]

[build-dependencies]
xdgen = "0.1"

[features]
default = ["dbus-config", "nvml", "wayland", "wgpu"]
dbus-config = ["libcosmic/dbus-config"]
nvml = ["dep:nvml-wrapper"]
wgpu = ["libcosmic/wgpu"]
wayland = ["libcosmic/wayland", "libcosmic/multi-window"]

[profile.release-with-debug]
inherits = "release"
debug = true

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "theme-v2" }
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "theme-v2" }
# cosmic-theme = { git = "https://github.com/pop-os/libcosmic//", branch = "theme-v2" }
